--- a/go.html
+++ b/go.html
@@ -41,6 +41,8 @@
   <div class="content">
     <h2 id="goName"></h2>
 
+  <div id="character-info" class="character-info-box"></div>
+
     <div class="gallery">
       <div class="gallery-item">
         <img src="assets/WechatIMG521.jpg" onclick="openModal(this.src)">
